--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -130,14 +130,20 @@
     "Filmy_wyswietl",
     "Filmy_usun",
     "Aktorzy_wyswietl",
+    "Aktorzy_usun",
     "Role_wyswietl",
+    "Role_usun",
     "Kosztorys_wyswietl",
+    "Kosztorys_usun",
     "Pracownicy_wyswietl_szczegoly",
     "Spotkania_wyswietl_szczegoly",
     "Zadania_wyswietl_szczegoly",
     "Menedzerowie_wyswietl_szczegoly",
     "Lokalizacje_wyswietl_szczegoly",
     "Filmy_wyswietl_szczegoly",
+    "Aktorzy_wyswietl_szczegoly",
+    "Role_wyswietl_szczegoly",
+    "Kosztorys_wyswietl_szczegoly",
     "EdytujPracownika",
     "EdytujGatunek",
     "EdytujSpotkanie",
@@ -145,6 +151,9 @@
     "EdytujMenedzera",
     "EdytujLokalizacje",
     "EdytujFilm",
+    "EdytujAktora",
+    "EdytujRole",
+    "EdytujKosztorys",
     "CreateMenu",
     "Dodaj pracownika",
     "Dodaj gatunek",
