--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -112,23 +112,30 @@
   "ScreenOrder": [
     "LoginMenu",
     "MainMenuMenedzer",
-    "MainMenuPracownik",
     "MainMenuAktor",
+    "MainMenuPracownik",
     "DisplayAndEditMenu",
+    "DisplayAndEditMenuPracownik",
     "DisplayAndEditMenuAktor",
     "Pracownicy_wyswietl",
+    "Pracownicy_wyswietl_tylko",
     "Pracownicy_usun",
     "Gatunki_wyswietl",
     "Gatunki_usun",
     "Spotkania_wyswietl",
+    "Spotkania_wyswietl_tylko",
     "Spotkania_usun",
     "Zadania_wyswietl",
+    "Zadania_wyswietl_pracownik",
     "Zadania_usun",
     "Menedzerowie_wyswietl",
+    "Menedzerowie_wyswietl_tylko",
     "Menedzerowie_usun",
     "Lokalizacje_wyswietl",
+    "Lokalizacje_wyswietl_tylko",
     "Lokalizacje_usun",
     "Filmy_wyswietl",
+    "Filmy_wyswietl_tylko",
     "Filmy_usun",
     "Aktorzy_wyswietl",
     "Aktorzy_usun",
@@ -149,6 +156,7 @@
     "EdytujGatunek",
     "EdytujSpotkanie",
     "EdytujZadanie",
+    "EdytujZadanie_pracownik",
     "EdytujMenedzera",
     "EdytujLokalizacje",
     "EdytujFilm",
