--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -140,17 +140,25 @@
     "Aktorzy_wyswietl",
     "Aktorzy_usun",
     "Role_wyswietl",
+    "Role_wyswietl_tylko",
     "Role_usun",
     "Kosztorys_wyswietl",
     "Kosztorys_usun",
     "Pracownicy_wyswietl_szczegoly",
+    "Pracownicy_wyswietl_szczegoly_tylko",
     "Spotkania_wyswietl_szczegoly",
+    "Spotkania_wyswietl_szczegoly_tylko",
     "Zadania_wyswietl_szczegoly",
+    "Zadania_wyswietl_szczegoly_pracownik",
     "Menedzerowie_wyswietl_szczegoly",
+    "Menedzerowie_wyswietl_szczegoly_tylko",
     "Lokalizacje_wyswietl_szczegoly",
+    "Lokalizacje_wyswietl_szczegoly_tylko",
     "Filmy_wyswietl_szczegoly",
+    "Filmy_wyswietl_szczegoly_tylko",
     "Aktorzy_wyswietl_szczegoly",
     "Role_wyswietl_szczegoly",
+    "Role_wyswietl_szczegoly_tylko",
     "Kosztorys_wyswietl_szczegoly",
     "EdytujPracownika",
     "EdytujGatunek",
