--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -133,6 +133,7 @@
     "Menedzerowie_usun",
     "Lokalizacje_wyswietl",
     "Lokalizacje_wyswietl_tylko",
+    "Lokalizacje_wyswietl_tylko_1",
     "Lokalizacje_usun",
     "Filmy_wyswietl",
     "Filmy_wyswietl_tylko",
