--- a/filmoplaner_prototype/Src/Lokalizacje_wyswietl_tylko.fx.yaml
+++ b/filmoplaner_prototype/Src/Lokalizacje_wyswietl_tylko.fx.yaml
@@ -35,7 +35,7 @@
             AccessibleLabel: =Self.Tooltip
             Height: =60
             Icon: =Icon.ChevronRight
-            OnSelect: =Navigate(Lokalizacje_wyswietl_szczegoly_tylko)
+            OnSelect: =ClearCollect(kolekcja ,BrowseGallery1_23.Selected); Navigate(Lokalizacje_wyswietl_szczegoly_tylko)
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
