--- a/filmoplaner_prototype/Src/Kosztorys_wyswietl.fx.yaml
+++ b/filmoplaner_prototype/Src/Kosztorys_wyswietl.fx.yaml
@@ -24,7 +24,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.'Koszt całkowity'
+            Text: =ThisItem.'Nazwa filmu'.Value
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 104
             X: =32
